name:                pledge
version:             0.1.0.0
synopsis:            OpenBSD's pledge(2) for Haskell
description:         Make OpenBSD kernel enforced promises about Haskell programs
license:             BSD3
license-file:        LICENSE
author:              Ossi Herrala
maintainer:          oherrala@gmail.com
copyright:           Ossi Herrala <oherrala@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Pledge
  build-depends:       base >=4.7 && <4.9
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
